fixed alignment

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     ul {
         max-height: 0;
         padding-top: 20px;
+        padding-left: 0;
         position: relative;
         transition: all 0.5s ease-out;
         -webkit-transition: all 0.5s;
